# gcp-data-loader

./: .gitignore  MANIFEST.in  README.md  explore_data.ipynb  requirements.txt  setup.cfg
config/: config.py
data/raw/jaffle-data/: raw_customers.csv  raw_stores.csv
data_loader/config/: config.py  config.yaml
data_loader/scripts/: upload_bigquery.py  upload_gsc.py
data_loader/tests/: test_config.py  test_upload_bigquery.py
scripts/: generate_data.py  upload_gsc.py
