[metadata]
name = data_loader
version = 0.1.0
author = Belinda Freiheit
description = BigQuery & GSC Upload
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bfreiheit/gcp-data-loader.git

[options]
packages = find:
python_requires = >=3.8
install_requires =
    google-cloud-bigquery
    google-cloud-storage
    jafgen
    setuptools
    PyYAML
include_package_data = True

[options.package_data]
data_loader =
    config/*.yaml
    data/raw/jaffle-data/*.csv
